fix on mobile

--- a/docs/_sass/minima/custom-styles.scss
+++ b/docs/_sass/minima/custom-styles.scss
@@ -416,6 +416,14 @@ body.light { /* Light Theme */
   image-rendering: pixelated;
   margin-left: 8px;
   margin-right: 8px;
+  flex-shrink: 0;
+}
+.supporter-icon.tier1 {
+  width: 32px;
+  height: 32px;
+  image-rendering: pixelated;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 .supporter-icon.tier2 {
   width: 36px;
@@ -432,8 +440,17 @@ body.light { /* Light Theme */
   margin-right: 8px;
 }
 .supporter-tier-title {
-  margin: 0.5rem auto 0.5rem;
+  margin: 0.5rem auto 1rem;
   color: var(--tier-color) !important;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+}
+.supporter-tier-title.tier1 {
+  font-size: 1.45rem;
+  font-weight: 500;
 }
 .supporter-tier-title.tier2 {
   font-size: 1.5rem;
@@ -455,6 +472,16 @@ body.light { /* Light Theme */
   padding: 0.5rem 1.25rem;
   border-radius: 50px;
   color: var(--tier-color);
+}
+.supporter-entry.tier1 {
+  border: 1px solid color-mix(in srgb, var(--tier-color), transparent 85%);
+  font-size: 1rem;
+  font-weight: 400;
+  background: color-mix(in srgb, var(--tier-color), transparent 95%);
+}
+.supporter-entry:hover.tier1 {
+  box-shadow: 0 0 15px color-mix(in srgb, var(--tier-color), transparent 80%);
+  background: color-mix(in srgb, var(--tier-color), transparent 80%);
 }
 .supporter-entry.tier2 {
   border: 1px solid color-mix(in srgb, var(--tier-color), transparent 80%);
